operator/pkg/gateway-api/testdata/gateway/gateway-ns-restricted-same-hostname/output/httproute-cross-ns-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cross-ns-route
  namespace: gateway-conformance-app-backend
  resourceVersion: "1000"
spec:
  hostnames:
    - api.example.test
  parentRefs:
    - name: ns-restricted-same-hostname
      namespace: gateway-conformance-infra
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /cross-ns
      backendRefs:
        - name: infra-backend-v1
          namespace: gateway-conformance-infra
          port: 8080
status:
  parents:
    - conditions:
        - lastTransitionTime: "2026-05-05T19:46:37Z"
          message: Accepted HTTPRoute
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2026-05-05T19:46:37Z"
          message: Service reference is valid
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
      controllerName: io.cilium/gateway-controller
      parentRef:
        name: ns-restricted-same-hostname
        namespace: gateway-conformance-infra
